2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add checks to functions tests.
	* tests/Makefile.am: Compile new tests and distribute new stdout files.
	* tests/derivable-function.cc: Call more methods.
	* tests/derivable-function.stdout: Regenerate.
	* tests/function.cc: Call more methods.
	* tests/function.stdout: Regenerate.
	* tests/linear-function.cc: Copy from tests/derivable-function.cc.
	* tests/linear-function.stdout: New.
	* tests/quadratic-function.cc: Copy from tests/twice-derivable-function.cc.
	* tests/quadratic-function.stdout: New.
	* tests/testsuite.at: Run new tests.
	* tests/twice-derivable-function.cc: Call more methods.
	* tests/twice-derivable-function.stdout: Regenerate.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add tests for function classes.
	* tests/Makefile.am: Compile new tests and distribute
	output files.
	* tests/derivable-function.cc: New.
	* tests/derivable-function.stdout: New.
	* tests/function.cc: New.
	* tests/function.stdout: New.
	* tests/testsuite.at: Run new tests.
	* tests/twice-derivable-function.cc: New.
	* tests/twice-derivable-function.stdout: New.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add more tests.
	* tests/Makefile.am: Add interval and util tests.
	* tests/interval.cc: New.
	* tests/interval.stdout: New.
	* tests/simple.cc: Show problem before adding constraints.
	* tests/simple.stdout: Regenerate.
	* tests/testsuite.at: Run interval and util tests.
	* tests/util.cc: New.
	* tests/util.stdout: New.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Check that git is newer enough.
	* bootstrap: Require at least git 1.5.5.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance bootstrap to handle submodules.
	* bootstrap: Retrieve submodules automatically.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Use submodules to factorize code.
	* .gitmodules: New.
	* build-aux/autotest.at: Remove.
	* build-aux/autotest.mk: Remove.