@@ -1,5 +1,15 @@
 null function (derivable function)
 Derivable function
+1
+1
+1
+1
+null function
+
+1
+1
+[1](0)
+[1](0)
 [1](0)
 [1](0)
 [1](0)
