@@ -10,3 +10,5 @@ null function
 1
 [1](0)
 [1](0)
+[1](0)
+[1](0)
