@@ -1,5 +1,27 @@
 null function (twice derivable function)
 Twice derivable function
+1
+1
+1
+1
+null function
+
+1
+1
+[1](0)
+[1](0)
+[1](0)
+[1](0)
+[1](0)
+[1](0)
+1
+1
+(1, 1)
+(1, 1)
+1
+1
+1
+1
 [1,1]((0))
 [1,1]((0))
 [1,1]((0))
